Полностью переделано